--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "~4.0.0"
   },
   "private": true
