--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "^0.15.0",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "redux-devtools": "^3.7.0",
     "typescript": "~4.0.0"
   },
   "private": true
